# Optical-Navigation-Unofficial

./: CMakeLists.txt  README.md
include/: acquisition.hpp  cam_meas.hpp  controller.hpp  find.hpp  mekf.hpp  ukf.hpp
src/acquisition/: CMakeLists.txt  acquisition.cpp  test_acq.cpp
src/cam_meas/: CMakeLists.txt  cam_meas.cpp  test_cammeas.cpp
src/controller/: CMakeLists.txt  controller.cpp  test_controller.cpp
src/find/: CMakeLists.txt  find.cpp  test_find.cpp
src/mekf/: mekf.cpp
src/ukf/: CMakeLists.txt  test_eigenmvn.cpp  test_ukf.cpp  ukf.cpp
test/: CMakeLists.txt  find_tests.cpp  ukf_tests.cpp
test/test_data/: Cesium_moon_eph.csv  Cesium_sun_eph.csv  c1_discretized_meas.csv  c1_discretized_moon_eph.csv  c1_discretized_sun_eph.csv  c1_discretized_traj.csv  c1_discretized_ukf_k0.csv  c3_measurements  c3_moon_eph  c3_sun_eph  c3_trajectory  test
